# src/anotherResource/routes/anotherResourceRouter.ts
@@ -1,16 +1,0 @@
-import { Router } from 'express';
-import { FactoryFunction } from 'tsyringe';
-import { AnotherResourceController } from '../controllers/anotherResourceController';
-
-const anotherResourceRouterFactory: FactoryFunction<Router> = (dependencyContainer) => {
-  const router = Router();
-  const controller = dependencyContainer.resolve(AnotherResourceController);
-
-  router.get('/', controller.getResource);
-
-  return router;
-};
-
-export const ANOTHER_RESOURCE_ROUTER_SYMBOL = Symbol('anotherResourceRouterFactory');
-
-export { anotherResourceRouterFactory };
